k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/k-litman/zprp-diet-assistant/backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
