k8s/celerybeat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celerybeat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celerybeat
  template:
    metadata:
      labels:
        app: celerybeat
    spec:
      containers:
        - name: celerybeat
          image: ghcr.io/k-litman/zprp-diet-assistant/backend:latest
          command:
            - /start-celerybeat.sh
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
