k8s/celeryworker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celeryworker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celeryworker
  template:
    metadata:
      labels:
        app: celeryworker
    spec:
      containers:
        - name: celeryworker
          image: ghcr.io/k-litman/zprp-diet-assistant/backend:sha-363f0b9
          command:
            - /start-celeryworker.sh
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
