k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: ghcr.io/k-litman/zprp-diet-assistant/frontend:sha-c785c55
          name: frontend
          ports:
            - containerPort: 4173
