k8s/celerybeat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celerybeat
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: celerybeat
