k8s/celeryworker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celeryworker
spec:
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
  selector:
    app: celeryworker
