k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173
  selector:
    app: frontend
